
= rufus-scheduler CHANGELOG.txt


== rufus-scheduler - 3.0.2    not yet released

- introduce Rufus::Scheduler::NotRunningError, thanks Gatis Tomsons


== rufus-scheduler - 3.0.1    released 2013/10/19

- fix post_install_message, thanks Ted Pennings
- bring back .parse_time_string and .parse_duration_string


== rufus-scheduler - 3.0.0    released 2013/10/02

- complete rewrite.
- introduce scheduler.interval('10s') { ... }


== rufus-scheduler - 2.0.24    released 2013/09/02

- lowered tzinfo dependency to >= 0.3.22
  http://stackoverflow.com/questions/18551970


== rufus-scheduler - 2.0.23    released 2013/07/26

- mutex vs timeout fix by Tobias Kraze


== rufus-scheduler - 2.0.22    released 2013/07/16

- parse "/10 * * * *" again (like <= 2.0.19 did), thanks @skrd


== rufus-scheduler - 2.0.21    released 2013/07/15

- add license (MIT) to gemspec file


== rufus-scheduler - 2.0.20    released 2013/07/15

- add Rufus::Scheduler.new (so that rs 3.0 quickstarts are OK with 2.0.20)
- implement CronLine#previous_time(now=Time.now) (Idea Matteo Cerutti)
- throw ArgumentError for invalid cron lines (Thanks Aimee Rose)
- cron 0 vs 24 hour case straightening (Thanks Aimee Rose)
- support for sun#L or sun#-2 in cron lines


== rufus-scheduler - 2.0.19    released 2013/05/07

- raise ArgumentError on <= 0.0 "every" frequency (Thanks Lucy Fu)
- support multiple mutexes (Thanks Rainux Luo)


== rufus-scheduler - 2.0.18    released 2013/03/06

- support for "L" in cron lines (Thanks Andrew Davey)
- support for negative time strings (Thanks Danny "northox" Fullerton)
- reject invalid weekdays (Thanks pazustep)


== rufus-scheduler - 2.0.17    released 2012/06/14

- @andrehjr patch to make it work on Ruby 1.9.3
- raises ArgumentError on unknown/unsupported options (Idea Tero Tilus)


== rufus-scheduler - 2.0.16    released 2011/12/31

- hardened Rufus.parse_time_string
- running job thread: getting rid of the job pointer once job is done

